<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp" >

    <LinearLayout
        android:id="@+id/success_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/package_box_no_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_success"
                android:gravity="center"
                android:minHeight="50dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="#ffffa810"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="50dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/package_box_open_tip"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>

        <include layout="@layout/layout_horizontal_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/open_package_box_success_tip"
            android:textColor="@color/grey_text"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/failure_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_failure"
            android:gravity="center"
            android:minHeight="50dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/scan_qr_code_failure"
            android:textSize="18sp"
            android:textStyle="normal" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="#d8d8d3"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_package_box_failure_tip_start"
                android:textColor="@color/grey_text"
                android:textSize="@dimen/font_normal"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/pickup_code_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffa810"
                android:textSize="@dimen/font_normal"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_package_box_failure_tip_end"
                android:textColor="@color/grey_text"
                android:textSize="@dimen/font_normal"
                android:textStyle="normal" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/scan_qr_code_again_tip"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/font_normal"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/feedback_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_success"
            android:gravity="center"
            android:minHeight="50dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/submit_success"
            android:textSize="18sp"
            android:textStyle="normal" />

        <include layout="@layout/layout_horizontal_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_success_tip"
                android:textColor="@color/grey_text"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_success_points_tip_start"
                android:textColor="@color/grey_text"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten"
                android:textColor="#ffffa810"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_success_points_tip_end"
                android:textColor="@color/grey_text"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/ok_text"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_blue_corners_button"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/share_to_get_points"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/close_text"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/selector_gray_corners_button"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/close"
        android:textColor="#ff8a8a8c"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>