<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg"
    android:orientation="vertical" >

    <!-- title bar -->

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dip"
        android:background="@drawable/input_bg"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/psw_editor"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_box_height"
            android:background="@null"
            android:drawableLeft="@drawable/ic_pwd"
            android:drawablePadding="8dip"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/old_psw"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="@dimen/input_box_left_padding"
            android:singleLine="true"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/font_normal" />

        <include layout="@layout/layout_horizontal_line" />

        <EditText
            android:id="@+id/new_psw_editor"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_box_height"
            android:background="@null"
            android:drawableLeft="@drawable/ic_pwd"
            android:drawablePadding="8dip"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/new_pay_psw"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="@dimen/input_box_left_padding"
            android:singleLine="true"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/font_normal" />

        <include layout="@layout/layout_horizontal_line" />

        <EditText
            android:id="@+id/confirm_psw_editor"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_box_height"
            android:background="@null"
            android:drawableLeft="@drawable/ic_pwd"
            android:drawablePadding="8dip"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/confirm_pay_psw"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="@dimen/input_box_left_padding"
            android:singleLine="true"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/font_normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/notice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/notice_vertical_padding"
        android:text="@string/new_password_notice"
        android:textColor="@color/grey_text"
        android:textSize="@dimen/font_medium" />

    <Button
        android:id="@+id/next"
        style="@style/common_button_style"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/selector_blue_corners_button"
        android:text="@string/commit" />

</LinearLayout>