<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg"
    android:orientation="vertical" >

    <!-- title bar -->

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="15dip"
        android:background="@drawable/input_bg"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/account_editor"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_box_height"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/mobile_hint"
            android:inputType="numberDecimal"
            android:maxLength="11"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_user_blue"
            android:drawablePadding="5dp"
            android:textCursorDrawable="@drawable/shape_blue_cursor"
            android:textColor="#ff333333"
            android:textColorHint="#ff898989"
            android:textSize="@dimen/font_normal" />

        <include layout="@layout/layout_horizontal_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_box_height"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/verify_code_editor"
                android:layout_width="0.0dip"
                android:layout_height="@dimen/edit_box_height"
                android:layout_weight="6.0"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/input_sms_verify_hint"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:singleLine="true"
                android:drawableStart="@drawable/ic_verify_code"
            	android:drawablePadding="5dp"
                android:textCursorDrawable="@drawable/shape_blue_cursor"
                android:textColor="#ff333333"
                android:textColorHint="#ff898989"
                android:textSize="@dimen/font_normal" />

            <!-- <View
                android:layout_width="@dimen/vertical_sep_width"
                android:layout_height="@dimen/edit_box_height"
                android:background="@color/vertical_sep_color" /> -->

            <Button
                android:id="@+id/get_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="35dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_weight="1.0"
                android:maxLength="8"
                android:singleLine="true"
                android:background="@drawable/selector_common_corners_button"
                android:text="@string/get_verify_code"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_normal" />
        </LinearLayout>

        <include layout="@layout/layout_horizontal_line" />

        <EditText
            android:id="@+id/password_editor"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_box_height"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@null"
            android:ellipsize="end"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/set_psw"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_password_blue"
            android:drawablePadding="5dp"
            android:textCursorDrawable="@drawable/shape_blue_cursor"
            android:textColor="#ff333333"
            android:textColorHint="#ff898989"
            android:textSize="@dimen/font_normal" >
        </EditText>

        <include layout="@layout/layout_horizontal_line" />

        <EditText
            android:id="@+id/confirm_password_editor"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/edit_box_height"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@null"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/confirm_psw"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:drawableStart="@drawable/ic_password_blue"
            android:drawablePadding="5dp"
            android:textCursorDrawable="@drawable/shape_blue_cursor"
            android:textColor="#ff333333"
            android:textColorHint="#ff898989"
            android:textSize="@dimen/font_normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/notice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/notice_vertical_padding"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/receive_sms_verify"
        android:textColor="@color/gray_text"
        android:textSize="@dimen/font_normal"
        android:visibility="gone" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="15.0dip" >

        <CheckBox
            android:id="@+id/protocol_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_checkbox"
            android:checked="true"
            android:paddingLeft="16.0dip"
            android:text="@string/agree"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/protocol_check"
            android:layout_alignTop="@+id/protocol_check"
            android:layout_toRightOf="@+id/protocol_check"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/protocol_name"
            android:textColor="@color/common_color"
            android:textSize="@dimen/font_normal" />
    </RelativeLayout>

        <Button
        android:id="@+id/next"
        style="@style/common_button_style"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/selector_common_corners_button"
        android:textColor="@android:color/white"
        android:text="@string/commit" />
</LinearLayout>