<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical"
     >

    <!-- title bar -->

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar_text" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8.0dip" >

        <EditText
            android:id="@+id/feedback_editor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:background="@drawable/text_field"
            android:gravity="top"
            android:hint="@string/feedback_et_hint"
            android:textSize="13sp"
            android:minLines="6"
            android:padding="10dip" />

        <EditText
            android:id="@+id/contact_editor"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginTop="8.0dip"
            android:background="@drawable/text_field"
            android:gravity="center_vertical"
            android:hint="@string/contact_method"
            android:paddingLeft="13.0dip"
            android:visibility="gone" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:clickable="true"
            android:text="@string/feedback_content_lenght_limit"
            android:textColor="@color/orange_text"
            android:textSize="@dimen/font_medium"
             />
        <TextView
            android:id="@+id/submit_proposal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:clickable="true"
            android:text="@string/join_feedback_tip"
            android:textColor="@color/orange_text"
            android:textSize="@dimen/font_medium"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>