<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg" >

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

    <LinearLayout
        android:id="@+id/user_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/account_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_mobile"
                    android:drawablePadding="8dip"
                    android:hint="请输入手机号码"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#ff333333"
                    android:textColorHint="#ff898989"
                    android:textSize="@dimen/font_normal"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/psw_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_pwd"
                    android:drawablePadding="8dip"
                    android:hint="请输入密码"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#ff333333"
                    android:textColorHint="#ff898989"
                    android:textSize="@dimen/font_normal"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/login"
            style="@style/common_button_style"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dip"
            android:background="@drawable/selector_common_corners_button"
            android:text="@string/login" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30.0dip"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/user_login_layout"
        android:layout_marginBottom="30dip"
        android:gravity="bottom"
        android:paddingTop="30dp" >

        <TextView
            android:id="@+id/forgot_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:gravity="left"
            android:text="@string/forgot_psw"
            android:textColor="@color/black_text"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:text="@string/register_tip"
            android:textColor="@color/black_text"
            android:textSize="@dimen/font_normal" />
    </RelativeLayout>

</RelativeLayout>